# LocalLLM_tgbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  index.html  llm_client.py  main.py  pyproject.toml  requirements.txt  search_client.py
app/: audio_client.py  bot.py  config.py  handlers.py  image_client.py  index.html  llm_client.py  llm_service.py  memory_service.py  pipeline.py  search_client.py  state.py  text_utils.py  tts_client.py  ui.py
